Force rotate on mobile

--- a/website/index.html
+++ b/website/index.html
@@ -15,5 +15,12 @@
         <a href="mailto:msarya@umich.edu" target="_blank"><img src="./assets/gmail-logo.svg" alt="Email"></a>
     </div>
     <script src="script.js"></script>
+    <script>
+        PleaseRotateOptions = {
+            allowClickBypass: false,
+            subMessage: "",
+        };
+    </script>
+    <script src="pleaserotate.js"></script>
 </body>
 </html>
