--- a/website/index.html
+++ b/website/index.html
@@ -3,17 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mihir S. Arya</title>
+    <meta name="description" content="Mihir S. Arya's Portfolio - Interactive Mathematical Animations and Visualizations">
+    <meta name="keywords" content="Mihir Arya, portfolio, mathematics, computer science, LinkedIn, GitHub, Twitter, email, University of Michigan, Ann Arbor, Michigan, USA, startup, founder, AMD, Uber, Google, Apple, Microsoft, Facebook, Amazon, Tesla, SpaceX, AI, machine learning, deep learning, computer vision, natural language processing, robotics, autonomous vehicles, quantum computing, blockchain, cryptocurrency, NFTs, Web3, AI ethics, AI safety, AI governance, AI policy, AI regulation, AI ethics, AI safety, AI governance, AI policy, AI regulation, Machine Learning, Deep Learning, Computer Vision, Natural Language Processing, Robotics, Autonomous Vehicles, Quantum Computing, Blockchain, Cryptocurrency, NFTs, Web3, AI Ethics, AI Safety, AI Governance, AI Policy, AI Regulation, Machine Learning, Deep Learning, Computer Vision, Natural Language Processing, Robotics, Autonomous Vehicles, Quantum Computing, Blockchain, Cryptocurrency, NFTs, Web3, AI Ethics, AI Safety, AI Governance, AI Policy, AI Regulation">
+    <meta name="author" content="Mihir S. Arya">
+    <meta name="theme-color" content="#000000">
+    <meta property="og:title" content="Mihir S. Arya - Portfolio">
+    <meta property="og:description" content="Say hi :&rpar;">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mihirarya.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mihir S. Arya - Portfolio">
+    <meta name="twitter:description" content="Say hi :&rpar;">
+    <meta name="twitter:creator" content="@mihir__arya">
+    <title>Mihir S. Arya - Portfolio</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+    <link rel="manifest" href="./site.webmanifest">
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://mihirarya.com">
 </head>
 <body>
-    <canvas id="animation"></canvas>
-    <div id="links">
-        <a href="https://github.com/RGBmarya" target="_blank"><img src="./assets/github-logo.svg" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/mihir-s-arya/" target="_blank"><img src="./assets/linkedin-logo.svg" alt="LinkedIn"></a>
-        <a href="https://twitter.com/mihir__arya" target="_blank"><img src="./assets/x-logo.svg" alt="Twitter"></a>
-        <a href="mailto:msarya@umich.edu" target="_blank"><img src="./assets/gmail-logo.svg" alt="Email"></a>
-    </div>
+    <canvas id="animation" aria-label="Interactive mathematical animation"></canvas>
+    <nav id="links" role="navigation" aria-label="Social links">
+        <a href="https://github.com/RGBmarya" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile">
+            <img src="./assets/github-logo.svg" alt="GitHub">
+        </a>
+        <a href="https://www.linkedin.com/in/mihir-s-arya/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
+            <img src="./assets/linkedin-logo.svg" alt="LinkedIn">
+        </a>
+        <a href="https://twitter.com/mihir__arya" target="_blank" rel="noopener noreferrer" aria-label="Twitter Profile">
+            <img src="./assets/x-logo.svg" alt="Twitter">
+        </a>
+        <a href="mailto:msarya@umich.edu" target="_blank" rel="noopener noreferrer" aria-label="Email">
+            <img src="./assets/gmail-logo.svg" alt="Email">
+        </a>
+    </nav>
     <script src="script.js"></script>
     <script>
         PleaseRotateOptions = {
